impl checkpoint